--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "bc-game"
-version = "0.1.4"
+name = "B-game"
+version = "0.1.5"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
