--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "B-game"
-version = "0.2.0"
+name = "BG-Game-Challenge"
+version = "0.2.1"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
